--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,13 @@ jobs:
           docker push myrepo/backend:latest
           docker push myrepo/postgres:latest
 
+      - name: Simulate production deploy
+        env:
+          API_KEY: ${{ secrets.PRODUCTION_API_KEY }}
+        run: |
+          echo "Deploying to simulated production environment"
+          echo "Using API Key: $API_KEY"
+
   simulate_production_deploy:
     runs-on: ubuntu-latest
     needs: publish_to_registry
