--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,42 +1,40 @@
-name: Build and Test
+name: Deploy
 
 on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
 
 jobs:
-  build_and_test_frontend:
+  publish_to_registry:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Build Docker image for frontend
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push Docker images
         run: |
           docker build -t myrepo/frontend:latest ./frontend
-          docker run --rm myrepo/frontend:latest npm test
-
-  build_and_test_backend:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Build Docker image for backend
-        run: |
           docker build -t myrepo/backend:latest ./backend
-          docker run --rm myrepo/backend:latest npm test
+          docker build -t myrepo/postgres:latest ./postgres
+          docker push myrepo/frontend:latest
+          docker push myrepo/backend:latest
+          docker push myrepo/postgres:latest
 
-  build_and_test_postgres:
+  simulate_production_deploy:
     runs-on: ubuntu-latest
+    needs: publish_to_registry
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Test PostgreSQL connection
+      - name: Simulate production deploy
+        env:
+          API_KEY: ${{ secrets.PRODUCTION_API_KEY }}
         run: |
-          docker run --rm postgres:13 psql -U admin -c "SELECT 1;"
+          echo "Deploying to simulated production environment"
+          echo "Using API Key: $API_KEY"
+
