--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -1,29 +1,25 @@
-# frontend/Dockerfile
+FROM node:14
 
-# Usar uma imagem base leve do Node.js
-FROM node:14-alpine
-
-RUN apk add --no-cache bash
+# Atualizar e instalar bash se necessário
+RUN apt-get update && apt-get install -y bash
 
 # Definir o diretório de trabalho no contêiner
 WORKDIR /app
 
-# Copiar apenas os arquivos de configuração para o cache de dependências
-COPY package*.json ./
-
-# Instalar dependências
-RUN npm install
-
-# Copiar o restante dos arquivos do frontend para o contêiner
+# Copiar os arquivos do projeto
 COPY . .
 
-# Construir a aplicação para produção
-RUN npm run build
+# Instalar as dependências
+RUN npm install
 
+# Garantir que o react-scripts e outros binários no node_modules tenham permissões de execução
 RUN chmod -R 755 ./node_modules/.bin
 
-# Expor a porta em que o servidor está rodando
+# Construir a aplicação
+RUN npm run build
+
+# Expor a porta
 EXPOSE 3000
 
-# Comando para iniciar o servidor em produção
-CMD ["npx", "serve", "-s", "build"]
+# Iniciar o aplicativo
+CMD ["npm", "start"]
