--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,40 +1,35 @@
-name: Deploy
+name: Build and Test
 
 on:
   push:
     branches:
       - master
+  pull_request:
+    branches:
+      - master
 
 jobs:
-  publish_to_registry:
+  build-test:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
-      - name: Build and push Docker images
+      - name: Build and Test Frontend
+        working-directory: ./frontend
         run: |
-          docker build -t myrepo/frontend:latest ./frontend
-          docker build -t myrepo/backend:latest ./backend
-          docker build -t myrepo/postgres:latest ./postgres
-          docker push myrepo/frontend:latest
-          docker push myrepo/backend:latest
-          docker push myrepo/postgres:latest
+          docker build -t myrepo/frontend .
+          # Adicionar testes se houver
 
-  simulate_production_deploy:
-    runs-on: ubuntu-latest
-    needs: publish_to_registry
-    steps:
-      - name: Simulate production deploy
-        env:
-          API_KEY: ${{ secrets.PRODUCTION_API_KEY }}
+      - name: Build and Test Backend
+        working-directory: ./backend
         run: |
-          echo "Deploying to simulated production environment"
-          echo "Using API Key: $API_KEY"
+          docker build -t myrepo/backend .
+          # Adicionar testes se houver
 
+      - name: Build Database Image
+        run: docker pull postgres:13
