--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,37 +3,33 @@ name: Deploy
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
-  publish_to_registry:
+  deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Log in to Docker Hub
+      - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push Docker images
+      - name: Push Frontend Image
+        working-directory: ./frontend
         run: |
-          docker build -t myrepo/frontend:latest ./frontend
-          docker build -t myrepo/backend:latest ./backend
-          docker build -t myrepo/postgres:latest ./postgres
-          docker push myrepo/frontend:latest
-          docker push myrepo/backend:latest
-          docker push myrepo/postgres:latest
+          docker build -t myrepo/frontend .
+          docker push myrepo/frontend
 
-  simulate_production_deploy:
-    runs-on: ubuntu-latest
-    needs: publish_to_registry
-    steps:
-      - name: Simulate production deploy
-        env:
-          API_KEY: ${{ secrets.PRODUCTION_API_KEY }}
+      - name: Push Backend Image
+        working-directory: ./backend
         run: |
-          echo "Deploying to simulated production environment"
-          echo "Using API Key: $API_KEY"
+          docker build -t myrepo/backend .
+          docker push myrepo/backend
+
+      - name: Deploy Simulation
+        run: echo "Deploying to simulated production environment"
